--- a/client/src/components/profile/ProfileBox.module.scss
+++ b/client/src/components/profile/ProfileBox.module.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     padding: 1.25rem;
     gap: 2rem;
-    overflow-x: visible;
+    // overflow-x: visible;
   }
 }
 
@@ -51,6 +51,8 @@
 
 .RightColumn {
   overflow: hidden;
+  width: 100%;
+  max-width: 100%;
 }
 
 .ProfileButton {
@@ -118,6 +120,7 @@
   gap: 0.8rem;
   overflow-y: scroll;
   padding-right: 0.5rem;
+  padding-bottom: 0.1rem;
 }
 
 .ProfileCommentsList::-webkit-scrollbar {
